--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Se Connecter</title>
     <link rel="stylesheet" href="./Styles/style.css" />
+    <link rel="icon" href="login.png" />
   </head>
   <body>
     <form action="" class="container">
